<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Clamor_Act6</string>
    <string name="select_food_prompt">Select a food item</string>
    <string name="meemeow">Meemeow\'s Fooderie</string>
    <string name="your_selections">Your Selections:</string>
    <string name="fries">Fries</string>
    <string name="mash_potato">MashPotato</string>
    <string name="hashbrown">Hashbrown</string>
    <string name="coke">Coke</string>
    <string name="coffee">Coffee</string>
    <string name="water">Water</string>
    <string name="submit">Submit</string>
    <string name="add_ons">Add Ons:</string>
    <string name="main">Main:</string>
    <string name="drink">Drinks:</string>
    <string name="view">Order Summary:</string>
</resources>